--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongodb": "^3.5.9",
-    "mongoose": "^5.9.26"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "private": true,
+    "dependencies": {
+        "@hapi/joi": "^17.1.1",
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "mongodb": "^3.5.9",
+        "mongoose": "^5.9.26"
+    }
 }
