--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,12 @@
 {
     "name": "backend",
     "version": "1.0.0",
-    "private": true,
+    "scripts": {
+        "start": "node server.js"
+    },
+    "engines": {
+        "node": "13.12.0"
+    },
     "dependencies": {
         "@hapi/joi": "^17.1.1",
         "body-parser": "^1.19.0",
